--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@tago-io/sdk": "^10.9.4",
-    "require": "^2.4.20",
-    "type":"module"
+    "require": "^2.4.20"
   }
+ 
 }
